--- a/index.html
+++ b/index.html
@@ -5,11 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bootstrap 4 Training 2</title>
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Nunito+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/main.css">
+
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+<header>
+    <!--  Logo & Navbar  -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-1">
+                <a href="#"><img src="img/logo.png" alt="Logotype"></a>
+            </div>
+            <div class="col-lg-7 m-auto">
+                <ul class="menu d-flex justify-content-left">
+                    <li class="menu__item"><a href="#">home</a></li>
+                    <li class="menu__item"><a href="#">about</a></li>
+                    <li class="menu__item"><a href="#">work</a></li>
+                    <li class="menu__item"><a href="#">process</a></li>
+                    <li class="menu__item"><a href="#">services</a></li>
+                    <li class="menu__item"><a href="#">testimonials</a></li>
+                    <li class="menu__item"><a href="#">contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</header>
 </body>
 </html>
