--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#"><img src="img/logo.png" alt="Logotype"></a>
             </div>
             <div class="col-lg-7 m-auto">
-                <ul class="menu d-flex justify-content-left">
+                <ul class="menu d-flex justify-content-center">
                     <li class="menu__item"><a href="#">home</a></li>
                     <li class="menu__item"><a href="#">about</a></li>
                     <li class="menu__item"><a href="#">work</a></li>
