--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
 <body>
 <header>
     <!--  Logo & Navbar  -->
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-1">
-                <a href="#"><img src="img/logo.png" alt="Logotype"></a>
-            </div>
-            <div class="col-lg-7 m-auto">
-                <ul class="menu d-flex justify-content-center">
-                    <li class="menu__item"><a href="#">home</a></li>
-                    <li class="menu__item"><a href="#">about</a></li>
-                    <li class="menu__item"><a href="#">work</a></li>
-                    <li class="menu__item"><a href="#">process</a></li>
-                    <li class="menu__item"><a href="#">services</a></li>
-                    <li class="menu__item"><a href="#">testimonials</a></li>
-                    <li class="menu__item"><a href="#">contact</a></li>
+    <nav class="navbar navbar-expand-md">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="img/logo.png" alt="Logotype">
+            </a>
+            <div class="navbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#">home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">about</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">work</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">process</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">testimonials</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">contact</a></li>
                 </ul>
             </div>
         </div>
-    </div>
+    </nav>
 </header>
 </body>
 </html>
